--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./app/index.js",
   "scripts": {
     "dev": "nodemon ./app",
-    "start": "nodemon ./app"
+    "start": "nodemon ./app",
+    "test": "mocha tests/*.test.js --timeout 20000"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,10 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
-    "nodemon": "^3.0.1"
+    "chai": "^4.3.10",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.1",
+    "sinon": "^16.1.3",
+    "supertest": "^6.3.3"
   }
 }
