--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "dev": "nodemon ./app",
     "start": "nodemon ./app",
-    "test": "mocha tests/*.test.js --timeout 20000"
+    "test": "mocha tests/*.test.js --timeout 20000",
+    "format:check": "prettier --check \"**/*.{js}\"",
+    "format:fix": "prettier --write \"**/*.{js}\"",
+    "lint:check": "eslint \"**/*.{js}\"",
+    "lint:fix": "eslint --fix \"*.{js}\" "
   },
   "keywords": [],
   "author": "",
@@ -21,8 +25,11 @@
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
     "chai": "^4.3.10",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "sinon": "^16.1.3",
     "supertest": "^6.3.3"
   }
