--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "prettier": "^3.0.3",
     "sinon": "^16.1.3",
     "supertest": "^6.3.3"
+  },
+  "engines": {
+    "node": ">=18.17.0"
   }
+  
 }
