fix command entry points

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "kudobuzz-assessment",
   "version": "1.0.0",
   "description": "",
-  "main": "./app/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./app",
-    "start": "nodemon ./app",
-    "test": "mocha tests/*.test.js --timeout 20000",
+    "dev": "nodemon ./src/app/index.js",
+    "start": "nodemon ./src/app/index.js",
+    "test": "mocha src/tests/*.test.js --timeout 20000",
     "format:check": "prettier --check \"**/*.{js}\"",
     "format:fix": "prettier --write \"**/*.{js}\"",
     "lint:check": "eslint \"**/*.{js}\"",
